# 4d-cube-Slicer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chunc4d.cpp  chunc4d.h  main.cpp  mygeomfunctions.cpp  mygeomfunctions.h  wk4dcore.cpp  wk4dcore.h  wk4dgraphics.cpp  wk4dgraphics.h  wk4dmatrix5.cpp  wk4dmatrix5.h  wk4dpointsofview.cpp  wk4dpointsofview.h
resources/: fragmshader1.frag  geomshader.geom  vertshader1.vert
